# geotrick

./: .gitignore  Cargo.toml  Embed.toml  README.md  flake.nix  memory.x  openocd.cfg
.cargo/: config
docs/example_nrf52_bluetooth/: README.txt
src/: main.rs
