[package]
name = "geotrick"
version = "0.1.0"
edition = "2018"

[dependencies]
panic-halt = "0.2.0"
# feather_m4 = { git = "https://github.com/atsamd-rs/atsamd" }
rubble = { version = "0.0.4", default-features = false }
rubble-nrf5x = { version = "0.0.4", features = ["52840"] }
# rubble-nrf5x = "0.0.4"
cortex-m = "0.7.2"
cortex-m-rtic = "0.5.3"
cortex-m-rt = "0.6.11"

nrf52840-hal = { version = "0.13", features = ["rt"], optional = false }

# [features]
# 52840 = ["rubble-nrf5x/52840", "nrf52840-hal"]
