[package]
name = "geotrick"
version = "0.1.0"
edition = "2018"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
panic-semihosting = "0.6.0"
embedded-hal = "0.2.7"
hal = { package = "nrf52840-hal", version = "0.16.0" }
heapless = "0.7.16"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
defmt = "0.3.5"
defmt-rtt = "0.4.0"

[[bin]]
name = "geotrick"
test = false
bench = false
